test/data/semantic-errors/too-many-arguments.ava
var thisFunction = function (x:int, y:int) -> return x + y; end;
thisFunction(2,3,4);